[package]
name = "cig"
description = "Generate an image of specified dimensions from a hex color code"
version = "0.1.0"
edition = "2024"
authors = ["Patrick Armengol <patrickarmengol@protonmail.com>"]
readme = "README.md"
documentation = "https://github.com/patrickarmengol/cig"
homepage = "https://github.com/patrickarmengol/cig"
repository = "https://github.com/patrickarmengol/cig"
license = "MIT OR Apache 2.0"


[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
image = "0.25.6"
anyhow = "1.0.98"
